bin_PROGRAMS = mixmaster
mixmaster_SOURCES = compress.c  keymgt.c   menunym.c   mix3.h\
	pgpcreat.c  random.c    rfc822.c buffers.c  config.h\
	mail.c     menusend.c  mixlib.def   pgpdata.c   rem.c\
	rndseed.c chain.c    crypto.c    maildir.c  menuutil.c\
	nym.c        pgpdb.c     rem1.c      service.c chain1.c\
	crypto.h    main.c     mime.c      parsedate.y  pgpget.c\
	rem2.c      stats.c chain2.c   menu.c     mix.c\
	pgp.c        util.c menu.h\
	mix.h       pgp.h        pool.c      version.h
# mixmaster_LDADD = 

mixmaster_LDFLAGS = -lcrypto -lncurses -lpcre -lz
